<resources>

    <string name="user_name">Username:</string>
    <string name="pass">Password:</string>
    <string name="button_login">Login</string>
    <string name="button_create">Create Account</string>
    <string name="text_or">Or</string>
    <string name="edit_uname">Enter Username</string>
    <string name="edit_pass" translatable="false">Enter Password</string>
    <string name="app_name">StudyBuddy</string>
    <string name="fname_view">First Name:</string>
    <string name="lname_view">Last Name:</string>
    <string name="uname_view">Username:</string>
    <string name="tname_view">Team Name:</string>
    <string name="fname_enterCreate">Enter First Name</string>
    <string name="lname_enterCreate">Enter Last Name</string>
    <string name="uname_enterCreate">Enter Username</string>
    <string name="tname_enterCreate">Enter Team Name</string>
    <string name="create_button">Create Account</string>
    <string name="back_createButton">Back</string>
    <string name="e_email">Email:</string>
    <string name="edit_email">Enter Email</string>
    <string name="eMail_view">Email:</string>
    <string name="btn_vSchedule">View Schedule</string>
    <string name="btn_vNotes">View Notes</string>
    <string name="btn_vTeam">View Team</string>
    <string name="btn_vProfile">View Profile</string>
    <string name="btn_signOut">Sign Out</string>
    <string name="minimum_password" />
    <string name="auth_failed" />
</resources>
